--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 server.port=9090
+server.servlet.context-path=/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/myapp
 spring.datasource.username=root
 spring.datasource.password=R@fael77
-# spring.datasource.platform=mysql
 spring.sql.init.platform = mysql
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.show-sql=false
+
 spring.jpa.hibernate.ddl-auto=create
 
 # secret_key = javainuse
@@ -16,3 +15,8 @@ spring.main.allow-bean-definition-overriding=true
 
 # me ajudou na integração entre as tabelas funcionalidades com a role
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# security.oauth2.client.access-token-uri= http://localhost:9090/oauth/token
+security.oauth2.client.scope=password
+# security.oauth2.client.client-id=rafa_client_id
+# security.oauth2.client.client-secret=client_secret_rafa@pass
