token jwt ok, missing ajust to pass privilage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,11 @@ spring.sql.init.platform = mysql
 
 spring.jpa.hibernate.ddl-auto=create
 
-# secret_key = javainuse
-# jwt_expiration= 86400000
-
 spring.main.allow-bean-definition-overriding=true
 
 # me ajudou na integração entre as tabelas funcionalidades com a role
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-# security.oauth2.client.access-token-uri= http://localhost:9090/oauth/token
 security.oauth2.client.scope=password
-# security.oauth2.client.client-id=rafa_client_id
-# security.oauth2.client.client-secret=client_secret_rafa@pass
+
+security.jwt.signing-key=byBzb2wgbsOjbyDDqSBhenVs
