--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-server.servlet.context-path=/
+# server.servlet.context-path=/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/myapp
 spring.datasource.username=root
@@ -8,7 +8,7 @@ spring.sql.init.platform = mysql
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.main.allow-bean-definition-overriding=true
+# spring.main.allow-bean-definition-overriding=true
 
 # me ajudou na integração entre as tabelas funcionalidades com a role
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
